# flux-try

./: README.md
charts/fluentbit/: BUILD.bazel  Chart.yaml  c.txt  values.yaml
charts/fluentbit/deployment/: fluentbit_helmfile.yaml.j2
charts/fluentbit/templates/: config.yaml  daemonset.yaml
dev/: dummy.yaml
